--- a/Blik Mac/GLAProjectsListViewController.xib
+++ b/Blik Mac/GLAProjectsListViewController.xib
@@ -17,20 +17,20 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="71" horizontalPageScroll="10" verticalLineScroll="71" verticalPageScroll="36" hasHorizontalScroller="NO" horizontalScrollElasticity="none" scrollerKnobStyle="light" translatesAutoresizingMaskIntoConstraints="NO" id="W9B-ly-3lZ">
-                    <rect key="frame" x="0.0" y="16" width="500" height="240"/>
+                    <rect key="frame" x="0.0" y="0.0" width="500" height="264"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="0Gp-HR-yte">
-                        <rect key="frame" x="0.0" y="0.0" width="500" height="240"/>
+                        <rect key="frame" x="0.0" y="0.0" width="500" height="264"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" selectionHighlightStyle="none" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="69" rowSizeStyle="automatic" viewBased="YES" id="GZN-Pm-4Iy">
-                                <rect key="frame" x="0.0" y="0.0" width="500" height="240"/>
+                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" selectionHighlightStyle="none" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="69" rowSizeStyle="automatic" viewBased="YES" id="GZN-Pm-4Iy">
+                                <rect key="frame" x="0.0" y="0.0" width="500" height="264"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                 <tableColumns>
-                                    <tableColumn width="497" minWidth="250" maxWidth="1000" id="b8y-M1-5UH">
+                                    <tableColumn editable="NO" width="497" minWidth="250" maxWidth="1000" id="b8y-M1-5UH">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -41,7 +41,7 @@
                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
-                                        <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                        <tableColumnResizingMask key="resizingMask" resizeWithTable="YES"/>
                                         <prototypeCellViews>
                                             <tableCellView placeholderIntrinsicWidth="116" placeholderIntrinsicHeight="57" id="LCw-fj-f7m" customClass="GLAProjectOverviewTableCellView">
                                                 <rect key="frame" x="1" y="1" width="497" height="69"/>
@@ -54,9 +54,9 @@
                                                             <constraint firstAttribute="height" constant="28" id="Ayg-4M-gxk"/>
                                                         </constraints>
                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="01t-l7-VUZ">
-                                                            <font key="font" size="16" name="AvenirNext-DemiBold"/>
+                                                            <font key="font" size="16" name="AvenirNext-Medium"/>
                                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                            <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                         </textFieldCell>
                                                     </textField>
                                                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QmR-yf-C99">
@@ -73,13 +73,13 @@
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="23" id="51Q-Ms-aPB"/>
                                                         </constraints>
-                                                        <buttonCell key="cell" type="square" title="Delete Project" bezelStyle="shadowlessSquare" imagePosition="overlaps" alignment="left" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="eD0-2P-IqQ" customClass="GLANavigationButtonCell">
+                                                        <buttonCell key="cell" type="square" title="Delete Project" bezelStyle="shadowlessSquare" imagePosition="overlaps" alignment="right" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="eD0-2P-IqQ" customClass="GLANavigationButtonCell">
                                                             <behavior key="behavior" lightByContents="YES"/>
                                                             <font key="font" size="13" name="AvenirNext-Medium"/>
                                                         </buttonCell>
                                                     </button>
                                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="rPy-bU-lu1">
-                                                        <rect key="frame" x="18" y="10" width="199" height="23"/>
+                                                        <rect key="frame" x="55" y="10" width="199" height="23"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Planned for Thursday 5th of June" id="Ulw-kA-GfG">
                                                             <font key="font" size="13" name="AvenirNext-MediumItalic"/>
@@ -87,13 +87,32 @@
                                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                         </textFieldCell>
                                                     </textField>
+                                                    <button placeholderIntrinsicWidth="82" placeholderIntrinsicHeight="43" translatesAutoresizingMaskIntoConstraints="NO" id="uJ7-L4-Vmd" customClass="GLAButton">
+                                                        <rect key="frame" x="20" y="10" width="29" height="23"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="29" id="j4g-0H-OiE"/>
+                                                        </constraints>
+                                                        <buttonCell key="cell" type="square" title="☆" alternateTitle="★" bezelStyle="shadowlessSquare" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="5ob-X7-1oC" customClass="GLAButtonCell">
+                                                            <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
+                                                            <font key="font" size="20" name="AvenirNext-Medium"/>
+                                                        </buttonCell>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="number" keyPath="cell.verticalOffsetDown">
+                                                                <integer key="value" value="0"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                        </userDefinedRuntimeAttributes>
+                                                    </button>
                                                 </subviews>
                                                 <constraints>
                                                     <constraint firstItem="UnQ-Ry-Bvo" firstAttribute="top" secondItem="LCw-fj-f7m" secondAttribute="top" constant="6" id="22V-nJ-Fuc"/>
+                                                    <constraint firstItem="uJ7-L4-Vmd" firstAttribute="bottom" secondItem="RUk-GO-gyx" secondAttribute="bottom" id="Ef4-Z3-BOv"/>
                                                     <constraint firstItem="RUk-GO-gyx" firstAttribute="bottom" secondItem="rPy-bU-lu1" secondAttribute="bottom" id="Eku-bi-LU9"/>
                                                     <constraint firstAttribute="trailing" secondItem="UnQ-Ry-Bvo" secondAttribute="trailing" constant="20" symbolic="YES" id="Ig8-ed-u90"/>
-                                                    <constraint firstItem="rPy-bU-lu1" firstAttribute="leading" secondItem="LCw-fj-f7m" secondAttribute="leading" constant="20" id="ZV4-p9-1JU"/>
+                                                    <constraint firstItem="uJ7-L4-Vmd" firstAttribute="top" secondItem="RUk-GO-gyx" secondAttribute="top" id="Iqm-kE-ArW"/>
+                                                    <constraint firstItem="uJ7-L4-Vmd" firstAttribute="leading" secondItem="LCw-fj-f7m" secondAttribute="leading" constant="20" id="PfW-iW-t6f"/>
                                                     <constraint firstAttribute="bottom" secondItem="rPy-bU-lu1" secondAttribute="bottom" constant="10" id="c4f-0C-5wn"/>
+                                                    <constraint firstItem="rPy-bU-lu1" firstAttribute="leading" secondItem="uJ7-L4-Vmd" secondAttribute="trailing" constant="8" id="fJm-11-82D"/>
                                                     <constraint firstItem="UnQ-Ry-Bvo" firstAttribute="trailing" secondItem="RUk-GO-gyx" secondAttribute="trailing" id="h8x-iC-tjy"/>
                                                     <constraint firstItem="UnQ-Ry-Bvo" firstAttribute="leading" secondItem="LCw-fj-f7m" secondAttribute="leading" constant="20" symbolic="YES" id="rDn-CG-94M"/>
                                                 </constraints>
@@ -129,9 +148,9 @@
                 </scrollView>
             </subviews>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="W9B-ly-3lZ" secondAttribute="bottom" constant="16" id="0mu-UW-ale"/>
+                <constraint firstAttribute="bottom" secondItem="W9B-ly-3lZ" secondAttribute="bottom" id="0mu-UW-ale"/>
                 <constraint firstItem="W9B-ly-3lZ" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="GAA-QZ-0os"/>
-                <constraint firstItem="W9B-ly-3lZ" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="16" id="ncd-VM-poZ"/>
+                <constraint firstItem="W9B-ly-3lZ" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="8" id="ncd-VM-poZ"/>
                 <constraint firstAttribute="trailing" secondItem="W9B-ly-3lZ" secondAttribute="trailing" id="tQx-Ip-kPC"/>
             </constraints>
         </customView>
