Uses dummy projects instead of just project names. Uses new collections list editor. Added reordering of collections. Added Work On Now button when editing a project. Fixed bug with back button when going from the add project navigation controls to the edit project controls. Added secondary color for the non-primary reminders in the list.

--- a/Blik Mac/GLAMainNavigationBarController.xib
+++ b/Blik Mac/GLAMainNavigationBarController.xib
@@ -116,7 +116,7 @@
                         <userDefinedRuntimeAttribute type="number" keyPath="cell.verticalOffsetDown">
                             <integer key="value" value="-2"/>
                         </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="boolean" keyPath="cell.alwaysHighlighted" value="YES"/>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="cell.alwaysHighlighted" value="NO"/>
                     </userDefinedRuntimeAttributes>
                     <connections>
                         <action selector="exitCurrentProject:" target="-2" id="77e-uv-dhf"/>
